<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111010"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLarge"
        android:layout_width="408dp"
        android:layout_height="728dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/imgLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/divider_horizontal_dark" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/eagle"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/eagle" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/elephant"
            app:srcCompat="@drawable/elephant" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/gorilla"
            app:layout_column="3"
            app:layout_row="0"
            app:srcCompat="@drawable/gorilla" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/panda"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/panda" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/panther"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@drawable/panther" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/polar"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/polar" />
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>